--- a/style/dark_theme/base.qss
+++ b/style/dark_theme/base.qss
@@ -232,3 +232,10 @@ QFrame[objectName="footerSeparator"] {
     max-height: 4px;
 }
 
+/* Menu button styling */
+QPushButton#menuButton {
+    border-radius: 3px;
+    padding: 0px;
+    text-align: center;
+}
+
