--- a/style/dark_theme/base.qss
+++ b/style/dark_theme/base.qss
@@ -143,6 +143,38 @@ QCheckBox::indicator:unchecked, QRadioButton::indicator:unchecked {
     border: 1px solid #3a3b40;
 }
 
+/* FinalTransformContainer specific checkbox styling */
+FinalTransformContainer QCheckBox {
+    color: #f0ebd8;
+    font-size: 9pt;
+    spacing: 8px;
+}
+FinalTransformContainer QCheckBox::indicator {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #3a3b40;
+    border-radius: 3px;
+    background-color: #181818;
+}
+FinalTransformContainer QCheckBox::indicator:unchecked {
+    image: url(resources/icons/feather_icons/square.svg);
+    background-color: #181818;
+    border-color: #3a3b40;
+}
+FinalTransformContainer QCheckBox::indicator:checked {
+    image: url(resources/icons/feather_icons/check-square.svg);
+    background-color: #181818;
+    border-color: #3a3b40;
+}
+FinalTransformContainer QCheckBox::indicator:hover {
+    border-color: #555555;
+    background-color: #232323;
+}
+FinalTransformContainer QCheckBox::indicator:focus {
+    border-color: #666666;
+    background-color: #2a2a2a;
+}
+
 QListWidget {
     background-color: #212121;
     color: #f0ebd8;
